# pressio

./: .buildinfo  .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  DEVELOPERS_GUIDELINES  DEVELOPERS_GUIDELINES.md  Doxyfile  Doxyfile-mcss  LICENSE  NOTICE  PackagesList.cmake  ProjectName.cmake  README  README.md  TODO  TPLsList.cmake  Version.cmake  command_utils.txt  concepts_note.html  conf.py  configuration.html  formulations.md  genindex.html  index.html  installation.html  keywords.html  license.html  list_of_cmake_optional_vars_to_enable.md  list_of_cmake_optional_vars_to_enable.txt  mydefs.html  objects.inv  pressio_cmake_config.h.in  search.html  searchindex.js  version.txt  wls_design.md
examples/cmake_installed/: CMakeLists.txt
examples/cmake_subdir/: CMakeLists.txt
tests/: CMakeLists.txt
tests/WIP/ode/: CMakeLists.txt
tests/WIP/optimizers/: CMakeLists.txt
tests/WIP/solvers_linear/: geqrf_kokkos.cc  solvers_linear_dense_eigen.cc  solvers_linear_sparse_eigen.cc
tests/WIP/solvers_nonlinear/: CMakeLists.txt
tests/a_rest/containers/: CMakeLists.txt
tests/apps/: CMakeLists.txt  fom_gold_states.hpp
tests/apps/epetra/: main.cc
tests/apps/euler1d/: main.cc
tests/apps/generate_basis_epetra_example/: main.cc
tests/apps/swe2d/: CMakeLists.txt  main.cc
tests/cmake/: colors.cmake  macrosForCreatingTests.cmake  macrosForCreatingUnitTests.cmake  options.cmake  tpls.cmake  version.cmake
tests/containers/: CMakeLists.txt
tests/containers/wrapper_static_error_messages/: CMakeLists.txt  main_for_matrix.cc  main_for_multivector.cc  main_for_vector.cc
tests/functional_large/: CMakeLists.txt
tests/functional_large/ode_explicit/: CMakeLists.txt  simple_analytical_eigen.cc
tests/functional_medium/: CMakeLists.txt
tests/functional_medium/ode_explicit/: CMakeLists.txt  burgers1d_euler_eigen.cc  burgers1d_euler_epetra.cc  burgers1d_euler_kokkos.cc  burgers1d_euler_tpetra.cc
tests/functional_medium/ode_implicit/: CMakeLists.txt  burgers1d_bdf1_eigen.cc  burgers1d_bdf1_observe_eigen.cc  burgers1d_bdf2_eigen.cc  burgers1d_bdf2_observe_eigen.cc  burgers1d_cn_eigen.cc  ode_implicit_arbitrary_stepper_correctness.cc
tests/functional_medium/solvers_nonlinear/: CMakeLists.txt
tests/functional_medium/testing_apps/: testing_apps.hpp
tests/functional_small/: CMakeLists.txt
tests/functional_small/expressions/: CMakeLists.txt  eigen_asdiagonalmatrix.cc  eigen_column.cc  eigen_diag.cc  eigen_span.cc  eigen_subspan.cc  eigen_traits.cc  kokkos_diag.cc  kokkos_span.cc  kokkos_strided_subview.cc  kokkos_subspan.cc  kokkos_traits.cc  test_helpers.hpp  tpetra_block_column.cc  tpetra_column.cc
tests/functional_small/mpl/: CMakeLists.txt  all.cc  mpl_meta_basic.cc  mpl_meta_detect_operators.cc
tests/functional_small/ode/: CMakeLists.txt  ode_advance_functions.cc  ode_concepts_advancers.cc  ode_concepts_common.cc  ode_concepts_explicit.cc  ode_concepts_implicit.cc  ode_explicit_concepts.cc  ode_explicit_numerics_custom_types.cc  ode_explicit_numerics_eigen.cc  ode_explicit_steppers_numerics_custom_types.cc  ode_explicit_steppers_numerics_eigen.cc  ode_implicit_app_called_with_correct_time.cc  ode_implicit_bdf1_numerics_eigen.cc  ode_implicit_bdf2_numerics_eigen.cc  ode_implicit_crank_nic_numerics_eigen.cc  ode_implicit_crank_nicolson_numerics_eigen.cc  ode_implicit_ensure_app_called_with_correct_time.cc  ode_implicit_numerics_eigen.cc  ode_implicit_stencil_data_eigen.cc  ode_implicit_stencil_data_kokkos.cc  ode_implicit_steppers_numerics_eigen.cc  testing_apps.hpp
tests/functional_small/ode_advancers/: CMakeLists.txt  advance_n_steps_check_time_and_step.cc  advance_n_steps_const_dt.cc  advance_n_steps_const_dt_with_observer.cc  advance_n_steps_per_step_guesser_const_dt.cc  advance_n_steps_per_step_guesser_varying_dt.cc  advance_n_steps_varying_dt.cc  api_check_advance_n_steps.cc  api_check_advance_n_steps_with_guesser.cc  concepts_state_guesser.cc  concepts_state_observer.cc  concepts_step_policy.cc  concepts_steppable.cc  ode_advance_functions.cc  ode_concepts_advancers.cc  revise.cc  (+1 more)
tests/gtest_mains/: gTestMain_kokkos.cc  gTestMain_mpi.cc  gTestMain_serial.cc  gTestMain_tpetra.cc
tests/ode/: CMakeLists.txt
tests/optimizers/: CMakeLists.txt
tests/rom/: CMakeLists.txt
tests/solvers/: CMakeLists.txt  solvers_matrix_free_newton_raphson_eigen.cc  solvers_newton_raphson_eigen.cc
tests/solvers_linear/: CMakeLists.txt  getrs_kokkos.cc
tests/solvers_nonlinear/: CMakeLists.txt  solvers_newton_raphson_eigen.cc
tests/test_apps/: apps.hpp
unit_tests/: CMakeLists.txt
unit_tests/containers/: CMakeLists.txt
unit_tests/expressions/: CMakeLists.txt  eigen_asdiagonalmatrix.cc  eigen_diag.cc  eigen_span.cc  eigen_subspan.cc  expressions_are_static_kokkos.cc  expressions_eigen_traits.cc  kokkos_diag.cc  kokkos_span.cc  kokkos_subspan.cc
unit_tests/gtest_mains/: gTestMain_mpi.cc
unit_tests/mpl/: CMakeLists.txt  mpl_meta_detect_operators.cc
unit_tests/ode/: CMakeLists.txt  reference_apps_for_testing.hpp
unit_tests/ops/: CMakeLists.txt  ops_eigen_diag.cc  ops_eigen_expressions.cc  ops_eigen_level2.cc  ops_eigen_matrix.cc  ops_eigen_native.cc  ops_eigen_span.cc  ops_eigen_vector.cc  ops_epetra_level3.cc  ops_epetra_vector.cc  ops_kokkos_level3.cc  ops_kokkos_matrix.cc  ops_kokkos_vector.cc  ops_tpetra_asdiagmatrix.cc  ops_tpetra_multi_vector.cc
unit_tests/optimizers/: CMakeLists.txt  optimizers_parameter_list.cc  optimizers_parameter_list_rol.cc
unit_tests/qr/: CMakeLists.txt  fixtures.hpp  qr_eigen.cc  qr_r9c4_gold.hpp  qr_tpetra.cc  qr_utest_fixtures.hpp
unit_tests/rom/: CMakeLists.txt  epetra_skeleton.hpp
unit_tests/solvers/: CMakeLists.txt  solvers_nonlinear_tolerances.cc
unit_tests/solvers_linear/: CMakeLists.txt  solvers_linear_eigen.cc
unit_tests/solvers_nonlinear/: CMakeLists.txt  concepts.cc  tolerances.cc
unit_tests/type_traits/: CMakeLists.txt  kokkos_strided_subview.cc  traits_kokkos.cc  traits_tpetra_block.cc
unit_tests/utils/: CMakeLists.txt  logger.cc  logger_mpi.cc  utils_serial_printer.cc
(+7860 files in other folders)
