
set(TESTING_LEVEL functional_small)

add_subdirectory(mpl)
add_subdirectory(utils)
add_subdirectory(type_traits)
add_subdirectory(expressions)
add_subdirectory(ops)
add_subdirectory(qr)
add_subdirectory(solvers_linear)
add_subdirectory(solvers_nonlinear)
add_subdirectory(ode_advancers)
add_subdirectory(ode_steppers)
add_subdirectory(rom)
