
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utils)

if(PRESSIO_ENABLE_TPL_EIGEN)
  add_subdirectory(adapter_api_error_msg)
  add_subdirectory(lspg_specific)
  add_subdirectory(wls_specific)
  add_subdirectory(view_current_fom_state_correctness)
  add_subdirectory(variable_decoder_jacobian_correctness)
endif()

add_subdirectory(galerkin_projector)
add_subdirectory(burgers1d)
add_subdirectory(swe2d)
add_subdirectory(steady_linear_adv_diff_2d)
add_subdirectory(explicit_galerkin_rank2_correctness)


if(PRESSIO_ENABLE_TPL_TRILINOS)
add_subdirectory(rank_local_explicit_galerkin_euler_continuous_time_api_epetra)
add_subdirectory(rank_local_explicit_galerkin_euler_continuous_time_api_tpetra)
endif()
