
add_subdirectory(newton_raphson)

add_subdirectory(standard_gauss_newton_normal_equations)
add_subdirectory(standard_gauss_newton_qr)
add_subdirectory(iteratively_reweighted_gauss_newton)
add_subdirectory(levenberg_marquardt)
add_subdirectory(ls_weighted_gn_lm)
add_subdirectory(ls_frozen_jacobian_gn_lm)